--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "pug": "^3.0.2",
