--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "mongoose": "^7.0.1",
     "pug": "^3.0.2",
     "puppeteer": "^19.6.0"
   }
